--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
     name: cash-linkify
-    env: php
-    buildCommand: composer install --no-dev --optimize-autoloader
-    startCommand: vendor/bin/heroku-php-apache2 public/
+    env: docker
     envVars:
       - key: APP_ENV
         value: production
@@ -25,5 +23,5 @@ services:
         value: stack
     disk:
       name: cash-linkify-disk
-      mountPath: /opt/render/project/src/storage
+      mountPath: /var/www/html/storage
       sizeGB: 1
